Updated all routes in mobile header

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -62,45 +62,46 @@
                             <div class="outer">
                                 <div class="inner text-align-center">
                                     <ul class="categories">
-                                        <li class="menu-item"><a href="index.html">Home</a></li>
+                                        <li class="menu-item"><a [routerLink]="['']">Home</a></li>
 
                                         <li class="menu-item dropdown"><a class="no-action">Snowboards</a>
                                             <ul class="submenu">                         
-                                                <li><a href="snowboards/index.html">Snowboard Home</a></li>
-                                                <li><a href="snowboards/videos.html">Snowboard Videos</a></li>
-                                                <li><a href="snowboards/tech.html">Snowboard Tech</a></li>
-                                                <li><a href="snowboards/team.html">Team Page</a></li>                      
+                                                <li><a [routerLink]="['snowboards']">Snowboard Home</a></li>
+                                                <li><a [routerLink]="['snowboards/videos']">Snowboard Videos</a></li>
+                                                <li><a [routerLink]="['snowboards/tech']">Snowboard Tech</a></li>
+                                                <li><a [routerLink]="['snowboards/team']">Team Page</a></li>                      
                                             </ul>
                                         </li>
                                     
                                         <li class="menu-item dropdown"><a class="no-action">Longboards</a>
                                             <ul class="submenu">                         
-                                                <li><a href="longboards/index.html">Longboard Selector</a></li>
-                                                <li><a href="longboards/videos.html">Longboard Videos</a></li> 
-                                                <li><a href="longboards/tech.html">Longboard Tech</a></li>                     
+                                                <li><a [routerLink]="['longboards']">Longboard Home</a></li>
+                                                <li><a [routerLink]="['longboards/videos']">Longboard Videos</a></li> 
+                                                <li><a [routerLink]="['longboards/tech']">Longboard Tech</a></li>                     
+                                                <li><a [routerLink]="['longboards/team']">Team Page</a></li>                     
                                             </ul>
                                         </li>
                                         
                                         <li class="menu-item dropdown"><a class="no-action">Store</a>
                                             <ul class="submenu">                         
-                                                <li><a href="apparel/index.html">Apparel</a></li>
-                                                <li><a href="store/25th-anniversary-items.html">Special Edition Items</a></li>                     
+                                                <li><a [routerLink]="['store/apparel']">Apparel</a></li>
+                                                <li><a [routerLink]="['store/special-edition']">Special Edition Items</a></li>                     
                                             </ul>
                                         </li>
                                         
-                                        <li class="menu-item"><a href="company/calendar.html">Calendar</a></li>
+                                        <li class="menu-item"><a [routerLink]="['company/calendar']">Calendar</a></li>
                                         <li class="menu-item dropdown"><a class="no-action">Company</a>
                                             <ul class="submenu">
-                                                <li><a href="company/dealers.html">Dealers</a></li>
-                                                <li><a href="company/warranty.html">Warranty / Ticket to Shred Registration</a></li>
-                                                <li><a href="company/news.html">News Feed</a></li>
-                                                <li><a href="company/index.html">About Us</a> </li>
-                                                <li><a href="company/contact.html">Contact Us</a></li>
-                                                <li><a href="company/moto.html">Moto</a></li>    
+                                                <li><a [routerLink]="['company/dealers']">Dealers</a></li>
+                                                <li><a [routerLink]="['company/warranty']">Warranty / Ticket to Shred Registration</a></li>
+                                                <li><a [routerLink]="['company/news']">News Feed</a></li>
+                                                <li><a [routerLink]="['company/']">About Us</a> </li>
+                                                <li><a [routerLink]="['company/contact']">Contact Us</a></li>
+                                                <li><a [routerLink]="['company/moto']">Moto</a></li>    
                                                 <li><a href="http://www.scsunlimited.com/sled-wraps/signature-series/never-summer.html" target="_blank">Snowmobile Wraps</a></li>                  
                                             </ul>
                                         </li>
-                                        <li class="menu-item"><div id="catCartSummary" data-quote="False" data-vertical="False" data-templateName="/Layouts/custom/cartsummary-txt.tpl" data-templateHash="zGFDbg8/1QXrHYEBHP+pne63YZE="><a href="OrderRetrievev2.aspx-CatalogueID=0.html">View Cart</a></div></li>
+                                        <!--<li class="menu-item"><div id="catCartSummary" data-quote="False" data-vertical="False" data-templateName="/Layouts/custom/cartsummary-txt.tpl" data-templateHash="zGFDbg8/1QXrHYEBHP+pne63YZE="><a href="OrderRetrievev2.aspx-CatalogueID=0.html">View Cart</a></div></li>-->
                                     </ul>
                                 </div>
                             </div>
@@ -114,7 +115,7 @@
                         <span class="btn_menu_line"></span>
                     </div>
                 </a>
-                <p class="menu-copyright"></p>
+                <!--<p class="menu-copyright"></p>
                 <ul class="menu-socials">
                     <li>Tester</li>                        
                     <li><a href="https://www.facebook.com/NeverSummerIndustries" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -122,7 +123,7 @@
                     <li><a href="https://www.youtube.com/channel/UC5DbXM5UmMNfVkP4fPkSYFg" target="_blank"><i class="fa fa-youtube"></i></a></li>
                     <li><a href="http://instagram.com/neversummerindustries" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://plus.google.com/+neversummer/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                </ul>
+                </ul>-->
             </div>
             <div class="clapat-menubg">
                 <div class="clapat-menubg-overlay"></div>
