--- a/src/app/snowboards/boards-all-mountain/boards-all-mountain.component.html
+++ b/src/app/snowboards/boards-all-mountain/boards-all-mountain.component.html
@@ -19,8 +19,8 @@
 		<h1 class="title-has-line text-align-center">Snowboards</h1>
 
 		<ul id="filters">
-			<li><a id="all" [routerLink]="['/snowboards']" class="active">All</a></li>
-			<li><a [routerLink]="['/snowboards/all-mountain']">All Mountain</a></li>
+			<li><a id="all" [routerLink]="['/snowboards']">All</a></li>
+			<li><a [routerLink]="['/snowboards/all-mountain']" class="active">All Mountain</a></li>
 			<li><a [routerLink]="['/snowboards/freeride']">Freeride</a></li>
 			<li><a [routerLink]="['/snowboards/freestyle']">Freestyle</a></li>
 			<li><a [routerLink]="['/snowboards/womens']">Women's</a></li>
@@ -47,34 +47,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="item3">
-					<a [routerLink]="['/snowboards/board/twenty-five']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Twenty Five</span>
-							<span class="item-cat">Freeride<br /><br />151<br />155<br />158<br />160<br />162<br />165<br />159X<br />163X<br />166X</span>
-						</div>
-					</a>
-				</div>
-				<div class="item4">
-					<a [routerLink]="['/snowboards/board/warlock']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Evo/17Warlock.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Warlock</span>
-							<span class="item-cat">Freestyle Twin<br /><br />148<br />150<br />152<br />154<br />157<br />150X<br />153X<br />156X<br />159X</span>
-						</div>
-					</a>
-				</div>
-				<div class="item5">
-					<a [routerLink]="['/snowboards/board/funslinger']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/funslinger/17Funslinger.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Funslinger</span>
-							<span class="item-cat">Freestyle Twin<br /><br />146<br />149<br />151<br />153<br />156<br />159<br />154X<br />157X<br />160X</span>
-						</div>
-					</a>
-				</div>
-				<div class="item6">
+        <div class="item3">
 					<a [routerLink]="['/snowboards/board/west']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/heritage/17West2.png')"></div>
 						<div class="item-overlay overlay-white">
@@ -83,25 +56,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="item7">
-					<a [routerLink]="['/snowboards/board/swift']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Summit/17Swift.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Swift</span>
-							<span class="item-cat">Freeride<br /><br />152<br />157<br />162</span>
-						</div>
-					</a>
-				</div>
-				<div class="item8">
-					<a [routerLink]="['/snowboards/board/aura']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/SLsplit/17Aura.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Aura</span>
-							<span class="item-cat">Women's Freeride<br /><br />143<br />146<br />148<br />150<br />152<br />155<br />157</span>
-						</div>
-					</a>
-				</div>
-				<div class="item9">
+        <div class="item4">
 					<a [routerLink]="['/snowboards/board/snowtrooper']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/snowtrooper/17Snowtrooper.png')"></div>
 						<div class="item-overlay overlay-white">
@@ -110,7 +65,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="item10">
+        <div class="item5">
 					<a [routerLink]="['/snowboards/board/ripsaw']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/ripsaw/17Ripsaw.png')"></div>
 						<div class="item-overlay overlay-white">
@@ -119,16 +74,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="item11">
-					<a [routerLink]="['/snowboards/board/chairman']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/chairman/17Chairman.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Chairman</span>
-							<span class="item-cat">Freeride<br /><br />157<br />160<br />164<br />173<br />161X<br />165X<br />169X</span>
-						</div>
-					</a>
-				</div>
-				<div class="item12">
+        <div class="item6">
 					<a [routerLink]="['/snowboards/board/infinity']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Infinity/17Infinity.png')"></div>
 						<div class="item-overlay overlay-white">
@@ -137,61 +83,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="item13">
-					<a [routerLink]="['/snowboards/board/onyx']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/onyx/17Onyx.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Onyx</span>
-							<span class="item-cat">Women's Freestyle Twin<br /><br />140<br />143<br />146<br />149</span>
-						</div>
-					</a>
-				</div>
-				<div class="item14">
-					<a [routerLink]="['/snowboards/board/proto-mini']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/evomini/17ProtoMini.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Mini Proto</span>
-							<span class="item-cat">Kid's All Mountain Twin<br /><br />137<br />140<br />144</span>
-						</div>
-					</a>
-				</div>
-				<div class="item15">
-					<a [routerLink]="['/snowboards/board/bantam']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/evomini/17Bantam.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Bantam</span>
-							<span class="item-cat">Boy's All Mountain Twin<br /><br />119<br />125<br />130<br />136<br />142</span>
-						</div>
-					</a>
-				</div>
-				<div class="item16">
-					<a [routerLink]="['/snowboards/board/starlet']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Onyxmini/17Starlet.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Starlet</span>
-							<span class="item-cat">Girl's All Mountain Twin<br /><br />119<br />125<br />130<br />136</span>
-						</div>
-					</a>
-				</div>
-				<div class="item17">
-					<a [routerLink]="['/snowboards/board/shredder']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/17Shredder.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Shredder</span>
-							<span class="item-cat">Kid's All Mountain Twin<br /><br />80<br />90<br />100<br />110</span>
-						</div>
-					</a>
-				</div>
-				<div class="item18">
-					<a [routerLink]="['/snowboards/board/twenty-five-split']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725Split.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Twenty Five Split</span>
-							<span class="item-cat">Freeride<br /><br />162</span>
-						</div>
-					</a>
-				</div>
-				<div class="item19">
+        <div class="item7">
 					<a [routerLink]="['/snowboards/board/west-split']">
 						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/heritage/17West.png')"></div>
 						<div class="item-overlay overlay-white">
@@ -200,26 +92,9 @@
 						</div>
 					</a>
 				</div>
-				<div class="item20">
-					<a [routerLink]="['/snowboards/board/prospector-split']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Prospector/17Prospector.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Prospector Split</span>
-							<span class="item-cat">Freeride<br /><br />157<br />160<br />164<br />161X<br />167X</span>
-						</div>
-					</a>
-				</div>
-				<div class="item21">
-					<a [routerLink]="['/snowboards/board/aura-split']">
-						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Ravensplit/17AuraSplit.png')"></div>
-						<div class="item-overlay overlay-white">
-							<span class="item-title">Aura Split</span>
-							<span class="item-cat">Women's Freeride<br /><br />151<br />154</span>
-						</div>
-					</a>
-				</div>
 			</div>
 		</div>
+
 
 		<div class="container">
 			<hr>
@@ -322,6 +197,7 @@
 						</div>
 					</div>
 				</li>
+
 				<ul id="webapp38150pagination" class="pagination webapp">
 					<li class="pag-current">1</li>
 					<li class="pag-number"><a href="#">2</a></li>
@@ -329,7 +205,10 @@
 					<li class="pag-number"><a href="#">4</a></li>
 					<li class="pag-next"><a href="#">Next</a></li>
 				</ul>
+
+
 			</ul>
+
 		</div>
 	</div>
 </div>
