--- a/src/app/snowboards/boards-freeride/boards-freeride.component.html
+++ b/src/app/snowboards/boards-freeride/boards-freeride.component.html
@@ -1,3 +1,218 @@
-<p>
-  boards-freeride works!
-</p>
+<div id="content">
+
+	<div class="top-parallax" style="background-image:url('../../../assets/img/snowboards/1101SnowHero.jpg')">
+		<div class="outer">
+			<div class="inner">
+				<div *ngIf="playActive" class="play-icon">
+					><i class="fa fa-play" (click)="onClick()"></i>
+				</div>
+				<div *ngIf="clicked" class="cntVid">
+					<figure class="youtube youtube-youtube">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/S49mJQXR5dw" frameborder="0" allowfullscreen></iframe>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="main">
+		<h1 class="title-has-line text-align-center">Snowboards</h1>
+
+		<ul id="filters">
+			<li><a id="all" [routerLink]="['/snowboards']">All</a></li>
+			<li><a [routerLink]="['/snowboards/all-mountain']">All Mountain</a></li>
+			<li><a [routerLink]="['/snowboards/freeride']" class="active">Freeride</a></li>
+			<li><a [routerLink]="['/snowboards/freestyle']">Freestyle</a></li>
+			<li><a [routerLink]="['/snowboards/womens']">Women's</a></li>
+			<li><a [routerLink]="['/snowboards/kids']">Kids</a></li>
+		</ul>
+
+		<div id="portfolio-wrap" class="no-gutter">
+			<div id="portfolio" data-col="6">
+        <div class="item1">
+					<a [routerLink]="['/snowboards/board/twenty-five']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Twenty Five</span>
+							<span class="item-cat">Freeride<br /><br />151<br />155<br />158<br />160<br />162<br />165<br />159X<br />163X<br />166X</span>
+						</div>
+					</a>
+				</div>
+        <div class="item2">
+					<a [routerLink]="['/snowboards/board/west']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/heritage/17West2.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">West</span>
+							<span class="item-cat">All Mountain<br /><br />152<br />154<br />156<br />159<br />162<br />157X<br />160X<br />164X<br />168X</span>
+						</div>
+					</a>
+				</div>
+        <div class="item3">
+					<a [routerLink]="['/snowboards/board/swift']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Summit/17Swift.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Swift</span>
+							<span class="item-cat">Freeride<br /><br />152<br />157<br />162</span>
+						</div>
+					</a>
+				</div>
+        <div class="item4">
+					<a [routerLink]="['/snowboards/board/aura']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/SLsplit/17Aura.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Aura</span>
+							<span class="item-cat">Women's Freeride<br /><br />143<br />146<br />148<br />150<br />152<br />155<br />157</span>
+						</div>
+					</a>
+				</div>
+        <div class="item5">
+					<a [routerLink]="['/snowboards/board/chairman']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/chairman/17Chairman.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Chairman</span>
+							<span class="item-cat">Freeride<br /><br />157<br />160<br />164<br />173<br />161X<br />165X<br />169X</span>
+						</div>
+					</a>
+				</div>
+        <div class="item6">
+					<a [routerLink]="['/snowboards/board/twenty-five-split']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Cobra/1725Split.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Twenty Five Split</span>
+							<span class="item-cat">Freeride<br /><br />162</span>
+						</div>
+					</a>
+				</div>
+        <div class="item7">
+					<a [routerLink]="['/snowboards/board/prospector-split']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Prospector/17Prospector.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Prospector Split</span>
+							<span class="item-cat">Freeride<br /><br />157<br />160<br />164<br />161X<br />167X</span>
+						</div>
+					</a>
+				</div>
+				<div class="item8">
+					<a [routerLink]="['/snowboards/board/aura-split']">
+						<div class="item-content" style="background-image:url('../../../assets/products/snowboards/Ravensplit/17AuraSplit.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Aura Split</span>
+							<span class="item-cat">Women's Freeride<br /><br />151<br />154</span>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<hr>
+			<section class="parallax" style="background-image: url('../../assets/img/snowboards/parallax-newsfeed-snowboard-snow.jpg');">
+				<div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+					<h3 class="title-has-line white">News Feed</h3>
+				</div>
+			</section>
+
+			<hr>
+
+			<ul class="our-team">
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/BI_TC_INT-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Board Insiders and Tracey Canaday</h5>
+							<p class="monospace title-has-line team-function">14-Sep-2016</p>
+							<p class="team-description">Interview with owner Tracey Canaday about Never Summer</p>
+							<a href="news-feed/board-insiders-and-tracey-canaday.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/warlockboardinsiders1-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Board Insiders Preview Review</h5>
+							<p class="monospace title-has-line team-function">23-Jun-2016</p>
+							<p class="team-description">See a sneak peak on the Never Summer Warlock review!</p>
+							<a href="news-feed/board-insiders-preview-review.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/candredit-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Catch and Release</h5>
+							<p class="monospace title-has-line team-function">29-Mar-2016</p>
+							<p class="team-description">The Never Summer West</p>
+							<a href="news-feed/catch-and-release.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/kidsdayoff-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">No School...</h5>
+							<p class="monospace title-has-line team-function">22-Mar-2016</p>
+							<p class="team-description">Never Summer Mini Proto...</p>
+							<a href="news-feed/no-school.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/dadsdayoff-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Dad's Day Off</h5>
+							<p class="monospace title-has-line team-function">16-Mar-2016</p>
+							<p class="team-description">Watch how Dad rides the Proto Type Two</p>
+							<a href="news-feed/dads-day-off.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/momsdayoff-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Mom's Day Off</h5>
+							<p class="monospace title-has-line team-function">08-Mar-2016</p>
+							<p class="team-description">Women's Proto Type Two</p>
+							<a href="news-feed/moms-day-off.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/chairmanreview-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Chairman Review</h5>
+							<p class="monospace title-has-line team-function">07-Mar-2016</p>
+							<p class="team-description">Read about the Chairman</p>
+							<a href="news-feed/chairman-review.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/protofamily-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">Proto Family</h5>
+							<p class="monospace title-has-line team-function">01-Mar-2016</p>
+							<p class="team-description">New for next year...</p>
+							<a href="news-feed/proto-family.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<li class="team-member" style="background-image:url('../../assets/img/snowboards/Demos2_Cal.jpg');">
+					<div class="team-overflow">
+						<div class="team-info">
+							<h5 class="team-name">The Never Summer Swift. It's Just a Powder Board...</h5>
+							<p class="monospace title-has-line team-function">23-Feb-2016</p>
+							<p class="team-description">Andrew Buergin and Mary Boddington hit Crested Butte on the Never Summer Swift. </p>
+							<a href="news-feed/the-never-summer-swift-its-just-a-powder-board.html" class="clapat-button outline-button">Read More</a>
+						</div>
+					</div>
+				</li>
+				<ul id="webapp38150pagination" class="pagination webapp">
+					<li class="pag-current">1</li>
+					<li class="pag-number"><a href="#">2</a></li>
+					<li class="pag-number"><a href="#">3</a></li>
+					<li class="pag-number"><a href="#">4</a></li>
+					<li class="pag-next"><a href="#">Next</a></li>
+				</ul>
+			</ul>
+		</div>
+	</div>
+</div>
