--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
 // @import './assets/css/responsive';
 // @import './assets/css/ModuleStyleSheets';
+.clapat-mask {
+	background:#fff;
+	height:100%;
+	width:100%;
+	position:fixed;
+	z-index:1000;
+}
+#clapatloader {
+	width: 40px;
+	height: 40px;
+	left: 50%;
+	top: 50%;
+	position: absolute;
+	margin: -20px 0 0 -20px;
+	background: #fff url("./assets/img/mark.png") no-repeat left top;
+	background-size:100%;
+	border-radius: 0%;
+	-webkit-animation: scaleout 1.0s infinite ease-in-out;
+	animation: scaleout 1.0s infinite ease-in-out;
+}
+@-webkit-keyframes scaleout {
+	0% { -webkit-transform: scale(0.0) }
+	100% {-webkit-transform: scale(1.0); opacity: 0; }
+}
+
+@keyframes scaleout {
+	0% {
+	transform: scale(0.0); -webkit-transform: scale(0.0); }
+	100% { transform: scale(1.0); -webkit-transform: scale(1.0); opacity: 0; }
+}
+
 
 /* 1. General Styles */		
 	
