Fixed dropdown header for mobile, added amazon s3 and updated links on home component, changed some styling

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="content">
-	<div class="top-parallax" style="background-image:url('../../../assets/img/home/1101HomeHero.jpg')">
+	<div class="top-parallax" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/1101HomeHero.jpg')">
 		<div class="outer">
 			<div class="inner">
 				<div *ngIf="playActive" class="play-icon">
@@ -17,7 +17,7 @@
 	<div id="main">
 		<div class="container">
 			<hr class="small" />
-			<section class="parallax" style="background-image: url('../../assets/img/home/parallax-newsfeed-home-snow.jpg');">
+			<section class="parallax" style="background-image: url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/parallax-newsfeed-home-snow.jpg');">
 				<div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
 					<h3 class="white">Feed</h3>
 					<p class="monospace title-has-line white">News, Events, and Other Never Summer Happenings</p>
@@ -25,7 +25,7 @@
 			</section>
 			<hr>
 			<ul class="our-team">
-				<li class="team-member" style="background-image:url('../../assets/img/home/openday11-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/openday11-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">Loveland Opening Day</h5>
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="team-member" style="background-image:url('../../assets/img/home/pebs-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/pebs-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">Proto Type Two Under Investigation</h5>
@@ -45,7 +45,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="team-member" style="background-image:url('../../assets/img/home/BI_TC_INT-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/BI_TC_INT-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">Board Insiders and Tracey Canaday</h5>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="team-member" style="background-image:url('../../assets/img/home/warlockboardinsiders1-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/warlockboardinsiders1-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">Board Insiders Review</h5>
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="team-member" style="background-image:url('../../assets/img/home/Wingmanedit-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/Wingmanedit-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">Everyone needs a Wingman!</h5>
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="team-member" style="background-image:url('../../assets/img/home/dimevideo16-Action=thumbnail&amp;Width=500&amp;Height=500&amp;algorithm=fill_proportional.jpg');">
+				<li class="team-member" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/img/home/dimevideo16-Action%3Dthumbnail%26Width%3D500%26Height%3D500%26algorithm%3Dfill_proportional.jpg');">
 					<div class="team-overflow">
 						<div class="team-info">
 							<h5 class="team-name">New Never Summer Dime</h5>
@@ -99,7 +99,7 @@
 			<div id="portfolio" data-col="3">
 				<div class="item1" style="background-color:#eee;">
 					<a [routerLink]="['snowboards/board/proto-type-two']">
-						<div class="item-content" style="background-image:url('../../assets/products/snowboards/proto/NS_ProtoT217_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
+						<div class="item-content" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/products/snowboards/proto/NS_ProtoT217_1-Action%3Dthumbnail%26Width%3D715%26Height%3D570%26algorithm%3Dfill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Proto Type Two</span>
 							<span class="item-cat">All Mountain Twin</span>
@@ -108,7 +108,7 @@
 				</div>
 				<div class="item2" style="background-color:#eee;">
 					<a [routerLink]="['snowboards/board/twenty-five']">
-						<div class="item-content" style="background-image:url('../../assets/products/snowboards/Cobra/NS_TwentyFive17_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
+						<div class="item-content" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/products/snowboards/Cobra/NS_TwentyFive17_1-Action%3Dthumbnail%26Width%3D715%26Height%3D570%26algorithm%3Dfill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Twenty Five</span>
 							<span class="item-cat">Freeride</span>
@@ -117,7 +117,7 @@
 				</div>
 				<div class="item3" style="background-color:#eee;">
 					<a [routerLink]="['snowboards/board/warlock']">
-						<div class="item-content" style="background-image:url('../../assets/products/snowboards/Evo/NS_Warlock17_1-Action=thumbnail&amp;Width=715&amp;Height=570&amp;algorithm=fill_proportional.jpg')"></div>
+						<div class="item-content" style="background-image:url('https://s3-us-west-1.amazonaws.com/neversummer/assets/products/snowboards/Evo/NS_Warlock17_1-Action%3Dthumbnail%26Width%3D715%26Height%3D570%26algorithm%3Dfill_proportional.jpg')"></div>
 						<div class="item-overlay">
 							<span class="item-title">Warlock</span>
 							<span class="item-cat">Freestyle Twin</span>
