--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -3,7 +3,7 @@
 		<div class="outer">
 			<div class="inner">
 				<div *ngIf="playActive" class="play-icon">
-					><i class="fa fa-play" (click)="onClick()"></i>
+					<i class="fa fa-play" (click)="onClick()"></i>
 				</div>
 				<div *ngIf="clicked" class="cntVid">
 					<figure class="youtube youtube-youtube">
