--- a/src/app/snowboards/assets/snowboard-main.scss
+++ b/src/app/snowboards/assets/snowboard-main.scss
@@ -972,3 +972,22 @@ ul.pagination li {
 		height: 775px;
 	}
 }
+@media only screen and (max-width: 1024px) {
+	.top-parallax {
+		height: 625px;
+		width: 100%;
+
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.top-parallax {
+		height: 525px;
+		width: 100%;
+	}
+}
+@media only screen and (max-width: 479px) {
+	// .top-parallax {
+	// 	height: 375px;
+	// }
+}
