Removed search icon from header

--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -50,7 +50,7 @@
                         <li><a href="http://www.scsunlimited.com/sled-wraps/signature-series/never-summer.html" target="_blank">Snowmobile Wraps</a></li>
                     </ul>
                 </li>
-                <li class="toggle-search"><a href="index.html#"><i class="fa fa-search"></i></a></li>
+                <!--<li class="toggle-search"><a href="index.html#"><i class="fa fa-search"></i></a></li>-->
             </ul>
         </div>
 
