Fixed two errors in longboards and dealer views

--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -17,12 +17,12 @@
 	<div id="main">
 		<h1 class="title-has-line text-align-center">Longboards</h1>
 
-		<ul id="filters">
+		<!--<ul id="filters">
 			<li><a id="all" href="index.html#" data-filter="*" class="active">All</a></li>
 			<li><a href="index.html#" data-filter=".8356146">Downhill</a></li>
 			<li><a href="index.html#" data-filter=".8355548">Freeride</a></li>
 			<li><a href="index.html#" data-filter=".8356147">Cruiser</a></li>
-		</ul>
+		</ul>-->
 	
 
 		<div id="portfolio-wrap" class="no-gutter">
